--- a/views/adminDashboard/adminDashboard.ejs
+++ b/views/adminDashboard/adminDashboard.ejs
@@ -8,17 +8,14 @@
     <link rel="stylesheet" href="css/dashboard/styles.css">
     <title>My Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
-
 <body>
     <div class="side-menu">
         <div class="brand-name">
-            <h1>Team Name</h1>
+            <h1>Admin Name</h1>
         </div>
         <ul>
-            <li><i class="fa fa-home" style="font-size:48px;color:white"></i>&nbsp;<span>Home</span> </li>
+            <li><i class="fa fa-home" style="font-size:40px;color:white"></i>&nbsp;<span>Home</span> </li>
             <li><img src="images/help-web-button.png" alt="">&nbsp; <span>Help</span></li>
             <li><img src="images/settings.png" alt="">&nbsp;<span>Settings</span> </li>
         </ul>
@@ -48,7 +45,7 @@
                 <div class="card">
                     <div class="box">
                         <h1>53</h1>
-                        <h3>No. of Mentors</h3>
+                        <h3>Mentor Corporates</h3>
                     </div>
                     <div class="icon-case">
                         <img src="images/teachers.png" alt="">
@@ -71,40 +68,55 @@
                     </div>
                     <table>
                         <tr>
-                            <th>NGO</th>
-                            <th>CaseStudy</th>
+                            <th>Name of the NGO</th>
+                            <th>Working towards</th>
                             <th>No. of Applicants</th>
-                            <th>Option</th>
+                            <th>Applications Received</th>
                         </tr>
                         <tr>
-                            <td>Grateful Giving</td>
-                            <td>promoting gender equality</td>
+                            <td>St.Mary's</td>
+                            <td>Marketing</td>
                             <td>120</td>
+                            <td>60</td>
                             <td><a href="#" class="btn">View</a></td>
+                            <td><a href="#" class="btn">Accept</a></td>
+                            <td><a href="#" class="btn">Reject</a></td>
                         </tr>
                         <tr>
-                            <td>Mission Minded</td>
-                            <td>promoting gender equality</td>
+                            <td>St.Mary's</td>
+                            <td>Marketing</td>
                             <td>120</td>
+                            <td>60</td>
                             <td><a href="#" class="btn">View</a></td>
+                            <td><a href="#" class="btn">Accept</a></td>
+                            <td><a href="#" class="btn">Reject</a></td>
                         </tr>
                         <tr>
-                            <td>Gracious Giving</td>
-                            <td>promoting gender equality</td>
+                            <td>St.Mary's</td>
+                            <td>Marketing</td>
                             <td>120</td>
+                            <td>60</td>
                             <td><a href="#" class="btn">View</a></td>
+                            <td><a href="#" class="btn">Accept</a></td>
+                            <td><a href="#" class="btn">Reject</a></td>
                         </tr>
                         <tr>
-                            <td>Care Club</td>
-                            <td>promoting gender equality</td>
+                            <td>St.Mary's</td>
+                            <td>Marketing</td>
                             <td>120</td>
+                            <td>60</td>
                             <td><a href="#" class="btn">View</a></td>
+                            <td><a href="#" class="btn">Accept</a></td>
+                            <td><a href="#" class="btn">Reject</a></td>
                         </tr>
                         <tr>
-                            <td>Fortunate Future</td>
-                            <td>promoting gender equality</td>
+                            <td>St.Mary's</td>
+                            <td>Marketing</td>
                             <td>120</td>
+                            <td>60</td>
                             <td><a href="#" class="btn">View</a></td>
+                            <td><a href="#" class="btn">Accept</a></td>
+                            <td><a href="#" class="btn">Reject</a></td>
                         </tr>
                     </table>
                 </div>
@@ -112,5 +124,4 @@
         </div>
     </div>
 </body>
-
 </html>
