--- a/views/changeMakersDashboard/changemakersDashboard.ejs
+++ b/views/changeMakersDashboard/changemakersDashboard.ejs
@@ -1,116 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/dashboard/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/dashboard/styles.css" />
     <title>My Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="side-menu">
-        <div class="brand-name">
-            <h1>Team Name</h1>
-        </div>
-        <ul>
-            <li><i class="fa fa-home" style="font-size:48px;color:white"></i>&nbsp;<span>Home</span> </li>
-            <li><img src="images/help-web-button.png" alt="">&nbsp; <span>Help</span></li>
-            <li><img src="images/settings.png" alt="">&nbsp;<span>Settings</span> </li>
-        </ul>
+      <div class="brand-name">
+        <h1>Team Name</h1>
+      </div>
+      <ul>
+        <li>
+          <i class="fa fa-home" style="font-size: 48px; color: white"></i
+          >&nbsp;<span>Home</span>
+        </li>
+        <li>
+          <img src="images/help-web-button.png" alt="" />&nbsp;
+          <span>Help</span>
+        </li>
+        <li>
+          <img src="images/settings.png" alt="" />&nbsp;<span>Settings</span>
+        </li>
+      </ul>
     </div>
     <div class="container">
-        <div class="header">
-            <div class="nav">
-                <div class="user">
-                    <img src="images/notifications.png" alt="">
-                    <div class="img-case">
-                        <img src="images/user.png" alt="">
-                    </div>
-                </div>
+      <div class="header">
+        <div class="nav">
+          <div class="user">
+            <img src="images/notifications.png" alt="" />
+            <div class="img-case">
+              <a href="/user/profile"><img src="images/user.png" alt="" /></a>
             </div>
+          </div>
         </div>
-        <div class="content">
-            <div class="cards">
-                <div class="card">
-                    <div class="box">
-                        <h1>2194</h1>
-                        <h3>NGOs</h3>
-                    </div>
-                    <div class="icon-case">
-                        <img src="images/schools.png" alt="">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <h1>53</h1>
-                        <h3>No. of Mentors</h3>
-                    </div>
-                    <div class="icon-case">
-                        <img src="images/teachers.png" alt="">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <h1>5</h1>
-                        <h3>Changemaker Teams</h3>
-                    </div>
-                    <div class="icon-case">
-                        <img src="images/students.png" alt="">
-                    </div>
-                </div>
+      </div>
+      <div class="content">
+        <div class="cards">
+          <div class="card">
+            <div class="box">
+              <h1>2194</h1>
+              <h3>NGOs</h3>
             </div>
-            <div class="content-2">
-                <div class="recent-payments">
-                    <div class="title">
-                        <h2>Case Studies</h2>
-                    </div>
-                    <table>
-                        <tr>
-                            <th>NGO</th>
-                            <th>CaseStudy</th>
-                            <th>No. of Applicants</th>
-                            <th>Option</th>
-                        </tr>
-                        <tr>
-                            <td>Grateful Giving</td>
-                            <td>promoting gender equality</td>
-                            <td>120</td>
-                            <td><a href="#" class="btn">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>Mission Minded</td>
-                            <td>promoting gender equality</td>
-                            <td>120</td>
-                            <td><a href="#" class="btn">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>Gracious Giving</td>
-                            <td>promoting gender equality</td>
-                            <td>120</td>
-                            <td><a href="#" class="btn">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>Care Club</td>
-                            <td>promoting gender equality</td>
-                            <td>120</td>
-                            <td><a href="#" class="btn">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>Fortunate Future</td>
-                            <td>promoting gender equality</td>
-                            <td>120</td>
-                            <td><a href="#" class="btn">View</a></td>
-                        </tr>
-                    </table>
-                </div>
+            <div class="icon-case">
+              <img src="images/schools.png" alt="" />
             </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <h1>53</h1>
+              <h3>No. of Mentors</h3>
+            </div>
+            <div class="icon-case">
+              <img src="images/teachers.png" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <h1>5</h1>
+              <h3>Changemaker Teams</h3>
+            </div>
+            <div class="icon-case">
+              <img src="images/students.png" alt="" />
+            </div>
+          </div>
         </div>
+        <div class="content-2">
+          <div class="recent-payments">
+            <div class="title">
+              <h2>Case Studies</h2>
+            </div>
+            <table>
+              <tr>
+                <th>NGO</th>
+                <th>CaseStudy</th>
+                <th>No. of Applicants</th>
+                <th>Option</th>
+              </tr>
+              <tr>
+                <td>Grateful Giving</td>
+                <td>promoting gender equality</td>
+                <td>120</td>
+                <td><a href="#" class="btn">View</a></td>
+              </tr>
+              <tr>
+                <td>Mission Minded</td>
+                <td>promoting gender equality</td>
+                <td>120</td>
+                <td><a href="#" class="btn">View</a></td>
+              </tr>
+              <tr>
+                <td>Gracious Giving</td>
+                <td>promoting gender equality</td>
+                <td>120</td>
+                <td><a href="#" class="btn">View</a></td>
+              </tr>
+              <tr>
+                <td>Care Club</td>
+                <td>promoting gender equality</td>
+                <td>120</td>
+                <td><a href="#" class="btn">View</a></td>
+              </tr>
+              <tr>
+                <td>Fortunate Future</td>
+                <td>promoting gender equality</td>
+                <td>120</td>
+                <td><a href="#" class="btn">View</a></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
