--- a/views/ngoDashboard/ngoDashboard.ejs
+++ b/views/ngoDashboard/ngoDashboard.ejs
@@ -37,7 +37,7 @@
           <div class="user">
             <img src="images/notifications.png" alt="" />
             <div class="img-case">
-              <img src="images/user.png" alt="" />
+              <a href="/user/profile"><img src="images/user.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
         <div class="cards">
           <div class="card">
             <div class="box">
-              <h1>#</h1>
+              <h1>2194</h1>
               <h3>Changemaker Teams</h3>
             </div>
             <div class="icon-case">
@@ -55,7 +55,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <h1>#</h1>
+              <h1>53</h1>
               <h3>Mentor Corporates</h3>
             </div>
             <div class="icon-case">
@@ -64,7 +64,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <h1>#</h1>
+              <h1>5</h1>
               <h3>NGOs</h3>
             </div>
             <div class="icon-case">
