--- a/views/forms/forms.ejs
+++ b/views/forms/forms.ejs
@@ -28,34 +28,20 @@
             <span class="title">Contact Details</span>
             <div class="fields">
               <div class="input-field">
-                <label>Full Name of the POC</label>
-                <input type="text" placeholder="Enter your name" required />
+                <label>Name of the NGO</label>
+                <input type="text" placeholder="Enter name" required />
               </div>
 
               <div class="input-field">
-                <label>Date to be published</label>
-                <input type="date" placeholder="Enter birth date" required />
+                <label>Email</label>
+                <input type="text" placeholder="Enter email" required />
               </div>
 
               <div class="input-field">
-                <label>Email of the POC for the event</label>
-                <input type="text" placeholder="Enter your email" required />
-              </div>
-
-              <div class="input-field">
-                <label>Mobile Number of the POC for the event</label>
+                <label>Phone</label>
                 <input
                   type="number"
-                  placeholder="Enter mobile number"
-                  required
-                />
-              </div>
-
-              <div class="input-field">
-                <label>Position of the POC</label>
-                <input
-                  type="text"
-                  placeholder="Enter your ccupation"
+                  placeholder="Phone number"
                   required
                 />
               </div>
@@ -69,7 +55,7 @@
 
             <div class="fields">
               <div class="input-field">
-                <label>Title</label>
+                <label>Title of the Event</label>
                 <input
                   type="text"
                   placeholder="Enter title of the case study"
@@ -93,22 +79,10 @@
                           <input type="text" value="" placeholder="Add a tag" />
                         </div>                       -->
 
-              <div class="input-field">
-                <label>When should the hackathon be published</label>
-                <input
-                  type="date"
-                  placeholder="Enter your issued date"
-                  required
-                />
-              </div>
 
-              <div class="input-field">
-                <label>When should the hackathon end</label>
-                <input type="date" placeholder="Enter expiry date" required />
-              </div>
 
               <div class="input-field-text">
-                <label>Short Description</label>
+                <label>Description</label>
                 <textarea
                   row="100"
                   ,
@@ -119,18 +93,7 @@
               </div>
 
               <div class="input-field-text">
-                <label>Long Description</label>
-                <textarea
-                  row="100"
-                  ,
-                  cols="500"
-                  placeholder="Long Description of 300 words"
-                  required
-                ></textarea>
-              </div>
-
-              <div class="input-field-text">
-                <label>Requirement</label>
+                <label>Requirements</label>
                 <textarea
                   row="100"
                   ,
