--- a/views/ngoDashboard/ngoDashboard.ejs
+++ b/views/ngoDashboard/ngoDashboard.ejs
@@ -101,7 +101,7 @@
           <div class="icon-case">
             <div class="title">
               <h2 style="padding: 7px">New Case Study</h2>
-              <a href="#" class="btn">+</a>
+              <a href="/ngo/form" class="btn">+</a>
             </div>
           </div>
         </div>
