--- a/views/auth/loginpage.ejs
+++ b/views/auth/loginpage.ejs
@@ -15,11 +15,11 @@
             <h2>Welcome</h2>
             <label>
                 <span>Email/User Name</span>
-                <input type="email" name="email" />
+                <input type="email" name="email" required />
             </label>
             <label>
                 <span>Password</span>
-                <input type="password" name="password" />
+                <input type="password" name="password" required />
             </label>
             <!-- <p class="forgot-pass">Forgot password?</p> -->
             <button type="submit" class="submit">Sign In</button>
@@ -53,22 +53,21 @@
                 </label>
                 <label>
                     <span>Name</span>
-                    <input type="text" name="name" />
+                    <input type="text" name="name" required />
                 </label>
                 <label>
                     <span>Email</span>
-                    <input type="email" name="email" />
+                    <input type="email" name="email" required />
                 </label>
                 <label>
                     <span>User Name</span>
-                    <input type="email" name="username" />
+                    <input type="text" name="username" required />
                 </label>
                 <label>
                     <span>Password</span>
-                    <input type="password" name="password" />
+                    <input type="password" name="password" required />
                 </label>
                 <button type="submit" class="submit">Sign Up</button>
-
             </form>
         </div>
     </div>
