home-page-improvements

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -158,10 +158,8 @@
       <div class="container">
         <div class="row gy-5 gx-lg-5">
           <div class="col-lg-4">
-            <div class="info">
-              <h3>Get in touch</h3>
-              <p>CDF is working largely to utilise the potential of the youth to resolve a diverse set of local
-                challenges which align with the global narrative of SDGs</p>
+
+        </div>
 
               <div class="info-item d-flex">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
