fixed home buttons in all dashboards

--- a/views/ngoDashboard/ngoDashboard.ejs
+++ b/views/ngoDashboard/ngoDashboard.ejs
@@ -18,10 +18,12 @@
         <h2>NGO Name</h2>
       </div>
       <ul>
-        <li>
-          <i class="fa fa-home" style="font-size: 40px; color: white"></i
-          ><span>Home</span>
-        </li>
+        <a href="/">
+          <li>
+            <i class="fa fa-home" style="font-size: 40px; color: white"></i
+            ><span>Home</span>
+          </li>
+        </a>
         <li>
           <img src="images/help-web-button.png" alt="" />&nbsp;
           <span>Help</span>
