--- a/views/adminDashboard/adminDashboard.ejs
+++ b/views/adminDashboard/adminDashboard.ejs
@@ -17,10 +17,12 @@
         <h1>Admin Name</h1>
       </div>
       <ul>
-        <li>
-          <i class="fa fa-home" style="font-size: 40px; color: white"></i
-          >&nbsp;<span>Home</span>
-        </li>
+        <a href="/">
+          <li>
+            <i class="fa fa-home" style="font-size: 40px; color: white"></i
+            >&nbsp;<span>Home</span>
+          </li>
+        </a>
         <li>
           <img src="images/help-web-button.png" alt="" />&nbsp;
           <span>Help</span>
