--- a/views/eventPage.ejs
+++ b/views/eventPage.ejs
@@ -9,79 +9,21 @@
 
 <body>
   <h1><%= event-title %></h1>
-  <p style="color: #3BACB6;"><strong>event-tags</strong></p>
-  <p>event-description</p>
+  <h3><%= ngo-name %></h3>
+  <p style="color: #3BACB6;"><strong><%= event-tags %></strong></p>
+  <p><%= event-description %></p>
+  <p><%= event-requirements %></p>
   <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Bachelor of Technology (CSE) : <a href="https://gitam.edu/">GITAM University</a> 2019 - 2023</li>
-    <li>Intermediate (BIEAP MPC) : FIITJEE Junior College 2017 - 2019</li>
-    <li>Class 10 (ICSE) : Timpany School 2016 - 2017</li>
-  </ul>
+
   <hr>
-  <h3>Volunteer Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Position</th>
-        <th>Organization</th>
-        <th>Year</th>
-        <th>Work done</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><strong>Event Management Lead</strong></td>
-        <td>ACM, GITAM</td>
-        <td>(06/2020 - Present)</td>
-        <td>Helped in organizing and executing technical and non-technical
-          events for my student community to promote skill development</td>
-      </tr>
-      <tr>
-        <td><strong>Content Writing Lead</strong></td>
-        <td>Entrepreneurs' Club, GITAM</td>
-        <td>(05/2020 - 05/2021)</td>
-        <td>Utilized exceptional writing, editing and proofreading skills to
-          produce engaging and error-free content.</td>
-      </tr>
-    </tbody>
-  </table>
+  <h3>Contact Details</h3>
+    <br>
+    ☎ <p><%= phone-number %></p>
+    <br>
+    ✉ <p><%= emaid-id %></p>
+  </p>
   <hr>
-  <h3>Skills</h3>
-  <table cellspacing="15">
-    <tr>
-      <td>Python</td>
-      <td>★★★★★</td>
-      <td>HTML</td>
-      <td>★★★★★</td>
-    </tr>
-    <tr>
-      <td>C Language</td>
-      <td>★★★★☆</td>
-      <td>CSS</td>
-      <td>★★★★★</td>
-    </tr>
-    <tr>
-      <td>C++ Language</td>
-      <td>★★★☆☆</td>
-      <td>Javascript</td>
-      <td>★★★★★</td>
-    </tr>
-    <tr>
-      <td>Data Science</td>
-      <td>★★★☆☆</td>
-      <td>Web Development</td>
-      <td>★★★★☆</td>
-    </tr>
-    <tr>
-      <td>Content Writing</td>
-      <td>★★★★☆</td>
-      <td>Public Speaking</td>
-      <td>★★★★☆</td>
-    </tr>
-  </table>
-  <hr>
-  <a href="contact-me.html">Contact Me</a>
+  <br>
 </body>
 
 </html>
