--- a/views/forms/forms.ejs
+++ b/views/forms/forms.ejs
@@ -15,7 +15,7 @@
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
 
-    <title>Responsive Regisration Form</title>
+    <title>Regisration Form</title>
   </head>
   <body>
     <div class="container">
