--- a/views/eventPage.ejs
+++ b/views/eventPage.ejs
@@ -3,24 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Shravya's Portfolio</title>
+  <title>Event Page</title>
   <link rel="stylesheet" href="/css/eventPage.css">
 </head>
 
 <body>
-  <h1><%= event-title %></h1>
-  <h3><%= ngo-name %></h3>
-  <p style="color: #3BACB6;"><strong><%= event-tags %></strong></p>
-  <p><%= event-description %></p>
-  <p><%= event-requirements %></p>
-  <hr>
-
+  <h1><%= eventTitle %></h1>
+  <h3><%= ngoName %></h3>
+  <p style="color: #3BACB6;"><strong><%= eventTags %></strong></p>
+  <p><%= eventDescription %></p>
+  <p><%= eventRequirements %></p>
   <hr>
   <h3>Contact Details</h3>
     <br>
-    ☎ <p><%= phone-number %></p>
+     <p>☎ <%= phoneNumber %></p>
     <br>
-    ✉ <p><%= emaid-id %></p>
+     <p>✉ <%= emailId %></p>
   </p>
   <hr>
   <br>
