--- a/views/forms/forms.ejs
+++ b/views/forms/forms.ejs
@@ -31,7 +31,7 @@
                 <label>Name of the NGO</label>
                 <input
                   type="text"
-                  name="name"
+                  name="ngoName"
                   placeholder="Enter name"
                   required
                 />
